--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 <head>
   <title>Project Beta</title>
-  <link rel="stylesheet" href="mystyle.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1>Hi Sarah!</h1>
 
-  <p>This is a paragraph</p>
+  <p>This is a paragraph hello I am dogS</p>
 
   <img src="static/dog.jpg" alt="dog">
 
