--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 </head>
 
 <body>
-  <h1>Hi Sarah!</h1>
+  <h1>Aperture Settings</h1>
+  <h2>Improving your photography by controlling aperture.</h2>
 
-  <p>This is a paragraph hello I am dogS</p>
+  <p>Cameras with interchangeable lenses offer three primary settings that affect how a photograph is exposed when the shutter button is pressed. These are aperture, shutter speed, and sensitivity (also called “ISO”) and are often referred to collectively as the “exposure triangle.” Each setting impacts the brightness of a photograph while also providing its own unique impact. This guide will focus on aperture.</p>
 
-  <img src="static/dog.jpg" alt="dog">
+  <img src="static/camera lens with iris.jpg"
+  id="lens"
+  alt="camera lens with iris">
 
   <table>
     <tr>
