--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
   <p>Most cameras have two primary modes that allow the aperture to be set: aperture priority and manual mode. In aperture priority mode, you control the aperture, and the camera calculates an optimal shutter speed and sensitivity (also called ISO) setting. In manual mode, you control all of the exposure settings, and changing aperture does not automatically change the other settings.</p>
 
+  <p>In the photographs below, there are seven colored objects lined up in a row. In each photograph, the white object is the one that the camera was focused on.</p>
+
   <h2><i>Aperture priority</i></h2>
 
   <p>In the images below, the aperture was set differently for each photograph. The camera then selected a shutter speed and sensitivity (ISO). Note how the background becomes more in focus as the f-number is increased.</p>
