All content finished

--- a/index.html
+++ b/index.html
@@ -125,6 +125,96 @@
     </tbody>
   </table>
 
+  <h2><i>Manual mode</i></h2>
+
+  <p>In manual mode, it becomes more apparent that less light is reaching the camera sensor as the f-number increases. The photographs below use the same apertures as the images above, but the photographer has set the shutter speed to 1/30 second and the sensitivity to 100 for each photograph.</p>
+
+  <table class="asset-tables">
+    <thead>
+      <tr>
+        <th>Filename</th>
+        <th>f-Number</th>
+        <th>Shutter Speed</th>
+        <th>Sensitivity (ISO)</th>
+        <th>Iris graphic</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <img src="static/M f-2.8.jpg"
+          alt="Photograph taken in manual mode with f-number 2.8, shutter speed 1/30 second and sensitivity 100.">
+        </td>
+        <td>&fnof;/2.8</td>
+        <td>1/30</td>
+        <td>100</td>
+        <td>
+          <img src="static/camera iris 04.png"
+          alt="Graphic showing camera iris 04.">
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <img src="static/M f-5.6.jpg"
+          alt="Photograph taken in manual mode with f-number 5.6, shutter speed 1/30 second and sensitivity 100.">
+        </td>
+        <td>&fnof;/5.6</td>
+        <td>1/30</td>
+        <td>100</td>
+        <td>
+          <img src="static/camera iris 06.png"
+          alt="Graphic showing camera iris 06.">
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <img src="static/M f-11.jpg"
+          alt="Photograph taken in manual mode with f-number 11, shutter speed 1/30 second and sensitivity 100.">
+        </td>
+        <td>&fnof;/11</td>
+        <td>1/30</td>
+        <td>100</td>
+        <td>
+          <img src="static/camera iris 08.png"
+          alt="Graphic showing camera iris 08.">
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <img src="static/M f-16.jpg"
+          alt="Photograph taken in manual mode with f-number 16, shutter speed 1/30 second and sensitivity 100.">
+        </td>
+        <td>&fnof;/16</td>
+        <td>1/30</td>
+        <td>100</td>
+        <td>
+          <img src="static/camera iris 09.png"
+          alt="Graphic showing camera iris 09.">
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <img src="static/M f-22.jpg"
+          alt="Photograph taken in manual mode with f-number 22, shutter speed 1/30 second and sensitivity 100.">
+        </td>
+        <td>&fnof;/22</td>
+        <td>1/30</td>
+        <td>100</td>
+        <td>
+          <img src="static/camera iris 10.png"
+          alt="Graphic showing camera iris 10.">
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <h1>Summary</h1>
+
+  <p>Aperture is one of the key camera settings that affects your photography. As the aperture decreases, the amount of light reaching the camera sensor decreases, so your photo will be darker, but more of your subject will be in focus.</p>
+
+  <p>An f-number is the ratio of lens’ focal length to the diameter of the aperture. A larger f-number means a smaller aperture. The standard sequence of f-numbers is fnof;/1, fnof;/1.4, fnof;/2, fnof;/2.8, fnof;/4, fnof;/5.6, fnof;/8, fnof;/11, fnof;/16, and fnof;/22. Each progressively larger f-number in the standard sequence lets in half as much light as the previous one.</p>
+
+  <p>The two most common camera modes for aperture control are aperture priority and manual mode. In aperture priority, you set the f-number, and the camera calculates an optimal shutter speed and sensitivity. In manual mode, you control shutter speed and sensitivity in addition to aperture.</p>
 
 </article>
 </body>
