fixed f-number codes

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
   <p>Aperture is one of the key camera settings that affects your photography. As the aperture decreases, the amount of light reaching the camera sensor decreases, so your photo will be darker, but more of your subject will be in focus.</p>
 
-  <p>An f-number is the ratio of lens’ focal length to the diameter of the aperture. A larger f-number means a smaller aperture. The standard sequence of f-numbers is fnof;/1, fnof;/1.4, fnof;/2, fnof;/2.8, fnof;/4, fnof;/5.6, fnof;/8, fnof;/11, fnof;/16, and fnof;/22. Each progressively larger f-number in the standard sequence lets in half as much light as the previous one.</p>
+  <p>An f-number is the ratio of lens’ focal length to the diameter of the aperture. A larger f-number means a smaller aperture. The standard sequence of f-numbers is &fnof;/1, &fnof;/1.4, &fnof;/2, &fnof;/2.8, &fnof;/4, &fnof;/5.6, &fnof;/8, &fnof;/11, &fnof;/16, and &fnof;/22. Each progressively larger f-number in the standard sequence lets in half as much light as the previous one.</p>
 
   <p>The two most common camera modes for aperture control are aperture priority and manual mode. In aperture priority, you set the f-number, and the camera calculates an optimal shutter speed and sensitivity. In manual mode, you control shutter speed and sensitivity in addition to aperture.</p>
 
