--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 </head>
 
 <body>
+
+  <ul>
+    <li><a href="#settings">Aperture Settings</a></li>
+    <li><a href="#action">Aperture in Action</a></li>
+    <li><a href="#priority">Aperture Priority</a></li>
+    <li><a href="#manual">Manual Mode</a></li>
+    <li><a href="#summary">Summary</a></li>
+  </ul>
   <article>
-  <h1>Aperture Settings</h1>
+  <h1 id="settings">Aperture Settings</h1>
   <p>Improving your photography by controlling aperture.</p>
 
   <p>Cameras with interchangeable lenses offer three primary settings that affect how a photograph is exposed when the shutter button is pressed. These are aperture, shutter speed, and sensitivity (also called “ISO”) and are often referred to collectively as the “exposure triangle.” Each setting impacts the brightness of a photograph while also providing its own unique impact. This guide will focus on aperture.</p>
@@ -36,13 +44,17 @@
 
   <p><i>Figure ?: As the size of the aperture decreases, the f-number increases. More of the photograph is in focus at smaller apertures, but the photograph is darker overall.</i></p>
 
-  <h1>Aperature in action</h1>
+  <br>
+
+  <hr>
+
+  <h1 id="action">Aperature in action</h1>
 
   <p>Most cameras have two primary modes that allow the aperture to be set: aperture priority and manual mode. In aperture priority mode, you control the aperture, and the camera calculates an optimal shutter speed and sensitivity (also called ISO) setting. In manual mode, you control all of the exposure settings, and changing aperture does not automatically change the other settings.</p>
 
   <p>In the photographs below, there are seven colored objects lined up in a row. In each photograph, the white object is the one that the camera was focused on.</p>
 
-  <h2><i>Aperture priority</i></h2>
+  <h2 id="priority"><i>Aperture priority</i></h2>
 
   <p>In the images below, the aperture was set differently for each photograph. The camera then selected a shutter speed and sensitivity (ISO). Note how the background becomes more in focus as the f-number is increased.</p>
 
@@ -125,7 +137,12 @@
     </tbody>
   </table>
 
-  <h2><i>Manual mode</i></h2>
+  <br>
+  <br>
+
+  <hr>
+
+  <h2 id="manual"><i>Manual mode</i></h2>
 
   <p>In manual mode, it becomes more apparent that less light is reaching the camera sensor as the f-number increases. The photographs below use the same apertures as the images above, but the photographer has set the shutter speed to 1/30 second and the sensitivity to 100 for each photograph.</p>
 
@@ -208,7 +225,12 @@
     </tbody>
   </table>
 
-  <h1>Summary</h1>
+  <br>
+  <br>
+
+  <hr>
+
+  <h1 id="summary">Summary</h1>
 
   <p>Aperture is one of the key camera settings that affects your photography. As the aperture decreases, the amount of light reaching the camera sensor decreases, so your photo will be darker, but more of your subject will be in focus.</p>
 
