image file renaming and organization
I renamed the static files to follow common conventions and organized them a bit.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <p>Cameras with interchangeable lenses offer three primary settings that affect how a photograph is exposed when the shutter button is pressed. These are aperture, shutter speed, and sensitivity (also called “ISO”) and are often referred to collectively as the “exposure triangle.” Each setting impacts the brightness of a photograph while also providing its own unique impact. This guide will focus on aperture.</p>
 
   <img
-    src="static/camera lens with iris.jpg"
+    src="static/camera-lens-with-iris.jpg"
     id="lens"
     alt="A close up of a camera lens, with a focus on the iris."
   >
@@ -38,7 +38,7 @@
   <p>Since a smaller aperture lets in less light, it will result in a darker photograph. What is not as  obvious is that a smaller aperture also causes more of your photograph to be in focus. In landscape photographs, objects far away from the camera are in focus, while in portrait photographs, it is common to see distant objects behind the subject that are out of focus. This difference is an effect of different aperture sizes. The range of distances that are in focus are referred to as the depth of field.</p>
 
   <img
-    src="static/F-number chart.png"
+    src="static/f-number-chart.png"
     id="irises"
     alt="A line art diagram showing the relationship between the size of the aperture, the f-number, and the effect on a photograph."
   >
@@ -72,66 +72,66 @@
     <tbody>
       <tr>
         <td>
-          <img src="static/Av f-2.8.jpg"
+          <img src="static/av-mode/av-f2_8.jpg"
           alt="Photograph taken in aperture priority mode with f-number 2.8. Shutter speed and sensitivity set by camera to 1/800 second and 200, respectively.">
         </td>
         <td>&fnof;/2.8</td>
         <td>1/800</td>
         <td>200</td>
         <td>
-          <img src="static/camera iris 04.png"
+          <img src="static/camera-irises/iris-04.png"
           alt="Graphic showing camera iris 04.">
         </td>
       </tr>
       <tr>
         <td>
-          <img src="static/Av f-5.6.jpg"
+          <img src="static/av-mode/av-f5_6.jpg"
           alt="Photograph taken in aperture priority mode with f-number 5.6. Shutter speed and sensitivity set by camera to 1/125 second and 200, respectively.">
         </td>
         <td>&fnof;/5.6</td>
         <td>1/125</td>
         <td>200</td>
         <td>
-          <img src="static/camera iris 06.png"
+          <img src="static/camera-irises/iris-06.png"
           alt="Graphic showing camera iris 06.">
         </td>
       </tr>
       <tr>
         <td>
-          <img src="static/Av f-11.jpg"
+          <img src="static/av-mode/av-f11.jpg"
           alt="Photograph taken in aperture priority mode with f-number 11. Shutter speed and sensitivity set by camera to 1/80 second and 400, respectively.">
         </td>
         <td>&fnof;/11</td>
         <td>1/80</td>
         <td>400</td>
         <td>
-          <img src="static/camera iris 08.png"
+          <img src="static/camera-irises/iris-08.png"
           alt="Graphic showing camera iris 08.">
         </td>
       </tr>
       <tr>
         <td>
-          <img src="static/Av f-16.jpg"
+          <img src="static/av-mode/av-f16.jpg"
           alt="Photograph taken in aperture priority mode with f-number 16. Shutter speed and sensitivity set by camera to 1/80 second and 800, respectively.">
         </td>
         <td>&fnof;/16</td>
         <td>1/80</td>
         <td>800</td>
         <td>
-          <img src="static/camera iris 09.png"
+          <img src="static/camera-irises/iris-09.png"
           alt="Graphic showing camera iris 09.">
         </td>
       </tr>
       <tr>
         <td>
-          <img src="static/Av f-22.jpg"
+          <img src="static/av-mode/av-f22.jpg"
           alt="Photograph taken in aperture priority mode with f-number 22. Shutter speed and sensitivity set by camera to 1/80 second and 1600, respectively.">
         </td>
         <td>&fnof;/22</td>
         <td>1/80</td>
         <td>1600</td>
         <td>
-          <img src="static/camera iris 10.png"
+          <img src="static/camera-irises/iris-10.png"
           alt="Graphic showing camera iris 10.">
         </td>
       </tr>
@@ -158,66 +158,66 @@
     <tbody>
       <tr>
         <td>
-          <img src="static/M f-2.8.jpg"
+          <img src="static/m-mode/m-f2_8.jpg"
           alt="Photograph taken in manual mode with f-number 2.8, shutter speed 1/30 second and sensitivity 100.">
         </td>
         <td>&fnof;/2.8</td>
         <td>1/30</td>
         <td>100</td>
         <td>
-          <img src="static/camera iris 04.png"
+          <img src="static/camera-irises/iris-04.png"
           alt="Graphic showing camera iris 04.">
         </td>
       </tr>
       <tr>
         <td>
-          <img src="static/M f-5.6.jpg"
+          <img src="static/m-mode/m-f5_6.jpg"
           alt="Photograph taken in manual mode with f-number 5.6, shutter speed 1/30 second and sensitivity 100.">
         </td>
         <td>&fnof;/5.6</td>
         <td>1/30</td>
         <td>100</td>
         <td>
-          <img src="static/camera iris 06.png"
+          <img src="static/camera-irises/iris-06.png"
           alt="Graphic showing camera iris 06.">
         </td>
       </tr>
       <tr>
         <td>
-          <img src="static/M f-11.jpg"
+          <img src="static/m-mode/m-f11.jpg"
           alt="Photograph taken in manual mode with f-number 11, shutter speed 1/30 second and sensitivity 100.">
         </td>
         <td>&fnof;/11</td>
         <td>1/30</td>
         <td>100</td>
         <td>
-          <img src="static/camera iris 08.png"
+          <img src="static/camera-irises/iris-08.png"
           alt="Graphic showing camera iris 08.">
         </td>
       </tr>
       <tr>
         <td>
-          <img src="static/M f-16.jpg"
+          <img src="static/m-mode/m-f16.jpg"
           alt="Photograph taken in manual mode with f-number 16, shutter speed 1/30 second and sensitivity 100.">
         </td>
         <td>&fnof;/16</td>
         <td>1/30</td>
         <td>100</td>
         <td>
-          <img src="static/camera iris 09.png"
+          <img src="static/camera-irises/iris-09.png"
           alt="Graphic showing camera iris 09.">
         </td>
       </tr>
       <tr>
         <td>
-          <img src="static/M f-22.jpg"
+          <img src="static/m-mode/m-f22.jpg"
           alt="Photograph taken in manual mode with f-number 22, shutter speed 1/30 second and sensitivity 100.">
         </td>
         <td>&fnof;/22</td>
         <td>1/30</td>
         <td>100</td>
         <td>
-          <img src="static/camera iris 10.png"
+          <img src="static/camera-irises/iris-10.png"
           alt="Graphic showing camera iris 10.">
         </td>
       </tr>
