--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
 
   <p class="subheader">Improving your photography by controlling aperture</p>
 
+  <figure id="figure-1" class="floatRight">
+    <img
+      src="static/camera-lens-with-iris-250.jpg"
+      class="photo"
+      alt="A close up of a camera lens, with a focus on the iris."
+    >
+    <figcaption>
+      A camera lens with the iris and aperture visible in the center.
+    </figcaption>
+  </figure>
+
   <p>Cameras with interchangeable lenses offer three primary settings that affect how a photograph is exposed when the shutter button is pressed. These are aperture, shutter speed, and sensitivity (also called “ISO”) and are often referred to collectively as the “exposure triangle.” Each setting impacts the brightness of a photograph while also providing its own unique impact. This guide will focus on aperture.</p>
-
-  <img
-    src="static/camera-lens-with-iris.jpg"
-    id="lens"
-    alt="A close up of a camera lens, with a focus on the iris."
-  >
-
-  <p><i>Figure ?: A camera lens with the iris and aperture visible in the center.</i></p>
 
   <p>The aperture setting, called an f-number, is usually expressed like this: &fnof;/11. The f-number is what fraction of the focal length the aperture diameter represents. A &fnof;/2 aperture has a diameter equal to &frac12; of the focal length, and a &fnof;/8 aperture has a diameter equal to &frac18; of the focal length. So as the aperture diameter decreases, the f-number increases.</p>
 
@@ -37,19 +40,20 @@
 
   <p>Since a smaller aperture lets in less light, it will result in a darker photograph. What is not as  obvious is that a smaller aperture also causes more of your photograph to be in focus. In landscape photographs, objects far away from the camera are in focus, while in portrait photographs, it is common to see distant objects behind the subject that are out of focus. This difference is an effect of different aperture sizes. The range of distances that are in focus are referred to as the depth of field.</p>
 
-  <img
-    src="static/f-number-chart.png"
-    id="irises"
-    alt="A line art diagram showing the relationship between the size of the aperture, the f-number, and the effect on a photograph."
-  >
-
-  <p><i>Figure ?: As the size of the aperture decreases, the f-number increases. More of the photograph is in focus at smaller apertures, but the photograph is darker overall.</i></p>
-
-  <br>
+  <figure id="figure-2" class="centered">
+    <img
+      src="static/f-number-chart.png"
+      id="irises"
+      alt="A line art diagram showing the relationship between the size of the aperture, the f-number, and the effect on a photograph."
+    >
+    <figcaption>
+      As the size of the aperture decreases, the f-number increases. More of the photograph is in focus at smaller apertures, but the photograph is darker overall.
+    </figcaption>
+  </figure>
 
   <hr>
 
-  <h1 id="action">Aperature in action</h1>
+  <h1 id="action">Aperture in action</h1>
 
   <p>Most cameras have two primary modes that allow the aperture to be set: aperture priority and manual mode. In aperture priority mode, you control the aperture, and the camera calculates an optimal shutter speed and sensitivity (also called ISO) setting. In manual mode, you control all of the exposure settings, and changing aperture does not automatically change the other settings.</p>
 
@@ -70,7 +74,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
+      <tr> 
         <td>
           <img src="static/av-mode/av-f2_8.jpg"
           alt="Photograph taken in aperture priority mode with f-number 2.8. Shutter speed and sensitivity set by camera to 1/800 second and 200, respectively.">
