--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <html>
 
 <head>
-  <title>Project Beta</title>
+  <title>Aperture Settings</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="keywords" content="photography, aperture, camera settings, f-number, f-stop">
+  <meta name="description" content="A quick guide describing how a camera's aperture setting affects the photographs it takes.">
 </head>
 
 <body>
@@ -32,13 +34,13 @@
     </figcaption>
   </figure>
 
-  <p>Cameras with interchangeable lenses offer three primary settings that affect how a photograph is exposed when the shutter button is pressed. These are aperture, shutter speed, and sensitivity (also called “ISO”) and are often referred to collectively as the “exposure triangle.” Each setting impacts the brightness of a photograph while also providing its own unique impact. This guide will focus on aperture.</p>
+  <p>Cameras with interchangeable lenses offer three primary settings that affect how a photograph is exposed when the shutter button is pressed. These are aperture, shutter speed, and sensitivity (also called &ldquo;ISO&rdquo;) and are often referred to collectively as the &ldquo;exposure triangle.&rdquo; Each setting impacts the brightness of a photograph while also providing its own unique impact. This guide will focus on aperture.</p>
 
   <p>The aperture setting, called an f-number, is usually expressed like this: &fnof;/11. The f-number is what fraction of the focal length the aperture diameter represents. A &fnof;/2 aperture has a diameter equal to &frac12; of the focal length, and a &fnof;/8 aperture has a diameter equal to &frac18; of the focal length. So as the aperture diameter decreases, the f-number increases.</p>
 
-  <p>F-numbers are not a continuous linear scale. The standard sequence of f-numbers is &fnof;/1, &fnof;/1.4, &fnof;/2, &fnof;/2.8, &fnof;/4, &fnof;/5.6, &fnof;/8, &fnof;/11, &fnof;/16, and &fnof;/22; but note that some lenses have numbers between these. These ratios have a specific mathematical relationship to each other in terms of how much light passes through the aperture. Each number in the standard sequence lets in half the light of the previous number, so an aperture set to &fnof;/2.8 will let in twice as much light as it would when set at &fnof;/4. A smaller f-number indicates a larger aperture which lets in more light, while a larger F-number indicates a smaller aperture, which lets in less light.</p>
+  <p>F-numbers are not a continuous linear scale. The standard sequence of f-numbers is &fnof;/1, &fnof;/1.4, &fnof;/2, &fnof;/2.8, &fnof;/4, &fnof;/5.6, &fnof;/8, &fnof;/11, &fnof;/16, and &fnof;/22; but note that some lenses have numbers between these. These ratios have a specific mathematical relationship to each other in terms of how much light passes through the aperture. Each number in the standard sequence lets in half the light of the previous number, so an aperture set to &fnof;/2.8 will let in twice as much light as it would when set at &fnof;/4. A smaller f-number indicates a larger aperture which lets in more light, while a larger f-number indicates a smaller aperture, which lets in less light.</p>
 
-  <p>Since a smaller aperture lets in less light, it will result in a darker photograph. What is not as  obvious is that a smaller aperture also causes more of your photograph to be in focus. In landscape photographs, objects far away from the camera are in focus, while in portrait photographs, it is common to see distant objects behind the subject that are out of focus. This difference is an effect of different aperture sizes. The range of distances that are in focus are referred to as the depth of field.</p>
+  <p>Since a smaller aperture lets in less light, it will result in a darker photograph. What is not as obvious is that a smaller aperture also causes more of your photograph to be in focus. In landscape photographs, objects far away from the camera are in focus, while in portrait photographs, it is common to see distant objects behind the subject that are out of focus. This difference is an effect of different aperture sizes. The range of distances that are in focus are referred to as the depth of field.</p>
 
   <figure id="figure-2" class="centered">
     <img
@@ -55,13 +57,13 @@
 
   <h1 id="action">Aperture in action</h1>
 
-  <p>Most cameras have two primary modes that allow the aperture to be set: aperture priority and manual mode. In aperture priority mode, you control the aperture, and the camera calculates an optimal shutter speed and sensitivity (also called ISO) setting. In manual mode, you control all of the exposure settings, and changing aperture does not automatically change the other settings.</p>
+  <p>Most cameras have two primary modes that allow the aperture to be set: aperture priority and manual mode. In aperture priority mode, you control the aperture, and the camera calculates an optimal shutter speed and sensitivity (also called &ldquo;ISO&rdquo;) setting. In manual mode, you control all the exposure settings, and changing aperture does not automatically change the other settings.</p>
 
-  <p>In the photographs below, there are seven colored objects lined up in a row. In each photograph, the white object is the one that the camera was focused on.</p>
+  <p>In the photographs below, there are seven colored objects lined up in a row with equal spacing. The white object in the center of the row is what the camera was focused on.</p>
 
   <h2 id="priority"><i>Aperture priority</i></h2>
 
-  <p>In the images below, the aperture was set differently for each photograph. The camera then selected a shutter speed and sensitivity (ISO). Note how the background becomes more in focus as the f-number is increased.</p>
+  <p>In the images below, the aperture was set differently for each photograph. Then the camera automatically selected a shutter speed and sensitivity (ISO). Note how the background becomes more in focus as the f-number is increased.</p>
 
   <table class="asset-tables">
     <thead>
@@ -237,7 +239,7 @@
 
   <p>Aperture is one of the key camera settings that affects your photography. As the aperture decreases, the amount of light reaching the camera sensor decreases, so your photo will be darker, but more of your subject will be in focus.</p>
 
-  <p>An f-number is the ratio of lens’ focal length to the diameter of the aperture. A larger f-number means a smaller aperture. The standard sequence of f-numbers is &fnof;/1, &fnof;/1.4, &fnof;/2, &fnof;/2.8, &fnof;/4, &fnof;/5.6, &fnof;/8, &fnof;/11, &fnof;/16, and &fnof;/22. Each progressively larger f-number in the standard sequence lets in half as much light as the previous one.</p>
+  <p>An f-number is the ratio of lens&rsquo; focal length to the diameter of the aperture. A larger f-number means a smaller aperture. The standard sequence of f-numbers is &fnof;/1, &fnof;/1.4, &fnof;/2, &fnof;/2.8, &fnof;/4, &fnof;/5.6, &fnof;/8, &fnof;/11, &fnof;/16, and &fnof;/22. Each progressively larger f-number in the standard sequence lets in half as much light as the previous one.</p>
 
   <p>The two most common camera modes for aperture control are aperture priority and manual mode. In aperture priority, you set the f-number, and the camera calculates an optimal shutter speed and sensitivity. In manual mode, you control shutter speed and sensitivity in addition to aperture.</p>
 
