--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <figure id="figure-2" class="centered">
     <img
-      src="static/f-number-chart.png"
+      src="static/f-number-chart.svg"
       id="irises"
       alt="A line art diagram showing the relationship between the size of the aperture, the f-number, and the effect on a photograph."
     >
@@ -65,173 +65,125 @@
 
   <p>In the images below, the aperture was set differently for each photograph. Then the camera automatically selected a shutter speed and sensitivity (ISO). Note how the background becomes more in focus as the f-number is increased.</p>
 
-  <table class="asset-tables">
+  <table class="photo-table">
     <thead>
       <tr>
-        <th>Filename</th>
-        <th>f-Number</th>
-        <th>Shutter Speed</th>
+        <th>Photograph</th>
+        <th>Aperture</th>
+        <th>Shutter speed</th>
         <th>Sensitivity (ISO)</th>
-        <th>Iris graphic</th>
       </tr>
     </thead>
     <tbody>
-      <tr> 
+      <tr class="odd">
         <td>
-          <img src="static/av-mode/av-f2_8.jpg"
+          <img src="static/av-mode/av-f2_8-300.jpg" class="photo"
           alt="Photograph taken in aperture priority mode with f-number 2.8. Shutter speed and sensitivity set by camera to 1/800 second and 200, respectively.">
         </td>
         <td>&fnof;/2.8</td>
         <td>1/800</td>
         <td>200</td>
-        <td>
-          <img src="static/camera-irises/iris-04.png"
-          alt="Graphic showing camera iris 04.">
-        </td>
       </tr>
-      <tr>
+      <tr class="even">
         <td>
-          <img src="static/av-mode/av-f5_6.jpg"
+          <img src="static/av-mode/av-f5_6-300.jpg" class="photo"
           alt="Photograph taken in aperture priority mode with f-number 5.6. Shutter speed and sensitivity set by camera to 1/125 second and 200, respectively.">
         </td>
         <td>&fnof;/5.6</td>
         <td>1/125</td>
         <td>200</td>
-        <td>
-          <img src="static/camera-irises/iris-06.png"
-          alt="Graphic showing camera iris 06.">
-        </td>
       </tr>
-      <tr>
+      <tr class="odd">
         <td>
-          <img src="static/av-mode/av-f11.jpg"
+          <img src="static/av-mode/av-f11-300.jpg" class="photo"
           alt="Photograph taken in aperture priority mode with f-number 11. Shutter speed and sensitivity set by camera to 1/80 second and 400, respectively.">
         </td>
         <td>&fnof;/11</td>
         <td>1/80</td>
         <td>400</td>
-        <td>
-          <img src="static/camera-irises/iris-08.png"
-          alt="Graphic showing camera iris 08.">
-        </td>
       </tr>
-      <tr>
+      <tr class="even">
         <td>
-          <img src="static/av-mode/av-f16.jpg"
+          <img src="static/av-mode/av-f16-300.jpg" class="photo"
           alt="Photograph taken in aperture priority mode with f-number 16. Shutter speed and sensitivity set by camera to 1/80 second and 800, respectively.">
         </td>
         <td>&fnof;/16</td>
         <td>1/80</td>
         <td>800</td>
-        <td>
-          <img src="static/camera-irises/iris-09.png"
-          alt="Graphic showing camera iris 09.">
-        </td>
       </tr>
-      <tr>
+      <tr class="odd">
         <td>
-          <img src="static/av-mode/av-f22.jpg"
+          <img src="static/av-mode/av-f22-300.jpg" class="photo"
           alt="Photograph taken in aperture priority mode with f-number 22. Shutter speed and sensitivity set by camera to 1/80 second and 1600, respectively.">
         </td>
         <td>&fnof;/22</td>
         <td>1/80</td>
         <td>1600</td>
-        <td>
-          <img src="static/camera-irises/iris-10.png"
-          alt="Graphic showing camera iris 10.">
-        </td>
       </tr>
     </tbody>
   </table>
-
-  <br>
-  <br>
 
   <h2 id="manual"><i>Manual mode</i></h2>
 
   <p>In manual mode, it becomes more apparent that less light is reaching the camera sensor as the f-number increases. The photographs below use the same apertures as the images above, but the photographer has set the shutter speed to 1/30 second and the sensitivity to 100 for each photograph.</p>
 
-  <table class="asset-tables">
+  <table class="photo-table">
     <thead>
       <tr>
-        <th>Filename</th>
-        <th>f-Number</th>
-        <th>Shutter Speed</th>
+        <th>Sample photograph</th>
+        <th>Aperture</th>
+        <th>Shutter speed</th>
         <th>Sensitivity (ISO)</th>
-        <th>Iris graphic</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
+      <tr class="odd">
         <td>
-          <img src="static/m-mode/m-f2_8.jpg"
+          <img src="static/m-mode/m-f2_8-300.jpg" class="photo"
           alt="Photograph taken in manual mode with f-number 2.8, shutter speed 1/30 second and sensitivity 100.">
         </td>
         <td>&fnof;/2.8</td>
         <td>1/30</td>
         <td>100</td>
-        <td>
-          <img src="static/camera-irises/iris-04.png"
-          alt="Graphic showing camera iris 04.">
-        </td>
       </tr>
-      <tr>
+      <tr class="even">
         <td>
-          <img src="static/m-mode/m-f5_6.jpg"
+          <img src="static/m-mode/m-f5_6-300.jpg" class="photo"
           alt="Photograph taken in manual mode with f-number 5.6, shutter speed 1/30 second and sensitivity 100.">
         </td>
         <td>&fnof;/5.6</td>
         <td>1/30</td>
         <td>100</td>
-        <td>
-          <img src="static/camera-irises/iris-06.png"
-          alt="Graphic showing camera iris 06.">
-        </td>
       </tr>
-      <tr>
+      <tr class="odd">
         <td>
-          <img src="static/m-mode/m-f11.jpg"
+          <img src="static/m-mode/m-f11-300.jpg" class="photo"
           alt="Photograph taken in manual mode with f-number 11, shutter speed 1/30 second and sensitivity 100.">
         </td>
         <td>&fnof;/11</td>
         <td>1/30</td>
         <td>100</td>
-        <td>
-          <img src="static/camera-irises/iris-08.png"
-          alt="Graphic showing camera iris 08.">
-        </td>
       </tr>
-      <tr>
+      <tr class="even">
         <td>
-          <img src="static/m-mode/m-f16.jpg"
+          <img src="static/m-mode/m-f16-300.jpg" class="photo"
           alt="Photograph taken in manual mode with f-number 16, shutter speed 1/30 second and sensitivity 100.">
         </td>
         <td>&fnof;/16</td>
         <td>1/30</td>
         <td>100</td>
-        <td>
-          <img src="static/camera-irises/iris-09.png"
-          alt="Graphic showing camera iris 09.">
-        </td>
       </tr>
-      <tr>
+      <tr class="odd">
         <td>
-          <img src="static/m-mode/m-f22.jpg"
+          <img src="static/m-mode/m-f22-300.jpg" class="photo"
           alt="Photograph taken in manual mode with f-number 22, shutter speed 1/30 second and sensitivity 100.">
         </td>
         <td>&fnof;/22</td>
         <td>1/30</td>
         <td>100</td>
-        <td>
-          <img src="static/camera-irises/iris-10.png"
-          alt="Graphic showing camera iris 10.">
-        </td>
       </tr>
     </tbody>
   </table>
-
-  <br>
-  <br>
 
   <hr>
 
