--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <nav id="page-nav">
     <ul>
       <li><a href="#background">Background</a></li>
-      <li><a href="#action">Aperture in Action</a></li>
-      <li><a href="#priority">Aperture Priority</a></li>
-      <li><a href="#manual">Manual Mode</a></li>
+      <li><a href="#action">Aperture in action</a></li>
+      <li><a href="#priority">Aperture priority</a></li>
+      <li><a href="#manual">Manual mode</a></li>
       <li><a href="#summary">Summary</a></li>
     </ul>
   </nav>
