marked new terms
- Applied HTML mark element to where terms are introduced
- Added style for mark element

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       </figure>
 
       <p>Cameras with interchangeable lenses offer three primary settings that affect how a photograph is exposed when
-        the shutter button is pressed. These are aperture, shutter speed, and sensitivity (also called
-        &ldquo;ISO&rdquo;) and are often referred to collectively as the &ldquo;exposure triangle.&rdquo; Each setting
+        the shutter button is pressed. These are <mark>aperture</mark>, <mark>shutter speed</mark>, and <mark>sensitivity</mark> (also called
+        &ldquo;<mark>ISO</mark>&rdquo;) and are often referred to collectively as the &ldquo;<mark>exposure triangle</mark>.&rdquo; Each setting
         impacts the brightness of a photograph while also providing its own unique impact. This guide will focus on
         aperture.</p>
 
-      <p>The aperture setting, called an f-number, is usually expressed like this: &fnof;/11. The f-number is what
-        fraction of the focal length the aperture diameter represents. A &fnof;/2 aperture has a diameter equal to
+      <p>The aperture setting, called an <mark>f-number</mark>, is usually expressed like this: &fnof;/11. The f-number is what
+        fraction of the <mark>focal length</mark> the aperture diameter represents. A &fnof;/2 aperture has a diameter equal to
         &frac12; of the focal length, and a &fnof;/8 aperture has a diameter equal to &frac18; of the focal length. So
         as the aperture diameter decreases, the f-number increases.</p>
 
@@ -63,7 +63,7 @@
         that a smaller aperture also causes more of your photograph to be in focus. In landscape photographs, objects
         far away from the camera are in focus, while in portrait photographs, it is common to see distant objects behind
         the subject that are out of focus. This difference is an effect of different aperture sizes. The range of
-        distances that are in focus are referred to as the depth of field.</p>
+        distances that are in focus are referred to as the <mark>depth of field</mark>.</p>
 
       <figure id="figure-2" class="centered">
         <img src="static/f-number-chart.svg" id="irises"
@@ -81,7 +81,7 @@
     <section id="action" class="nav-target">
       <h2>Aperture in action</h2>
 
-      <p>Most cameras have two primary modes that allow the aperture to be set: aperture priority and manual mode. In
+      <p>Most cameras have two primary modes that allow the aperture to be set: <mark>aperture priority</mark> and <mark>manual mode</mark>. In
         aperture priority mode, you control the aperture, and the camera calculates an optimal shutter speed and
         sensitivity (also called &ldquo;ISO&rdquo;) setting. In manual mode, you control all the exposure settings,
         and changing aperture does not automatically change the other settings.</p>
