--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
   <title>Aperture Settings</title>
@@ -8,6 +8,7 @@
   <meta name="keywords" content="photography, aperture, camera settings, f-number, f-stop">
   <meta name="description"
     content="A quick guide describing how a camera's aperture setting affects the photographs it takes.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Arvo|Lato" rel="stylesheet">
 </head>
 
